--- a/my_app/BUILD
+++ b/my_app/BUILD
@@ -1,6 +1,16 @@
-load('@//:helpers/docker.bzl', "nodejs_docker_js")
+load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
+load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
 
-nodejs_docker_js(
+nodejs_binary(
   name = "myapp",
+  data = [],
   entry_point = "index.js",
+)
+
+nodejs_image(
+  name = "docker",
+  entry_point = "index.js",
+  data = ["myapp"],
+  include_node_repo_args = False,
+  binary = "myapp",
 )
