feat: change the name of the nodejs toolchain

--- a/my_app/BUILD
+++ b/my_app/BUILD
@@ -5,6 +5,7 @@ nodejs_binary(
   name = "myapp",
   data = [],
   entry_point = "index.js",
+  toolchain = "nodejs_host",
 )
 
 nodejs_image(
@@ -13,4 +14,5 @@ nodejs_image(
   data = ["myapp"],
   include_node_repo_args = False,
   binary = "myapp",
+  node_repository_name = "nodejs_host",
 )
